--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,26 +8,10 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+  # Navigation hidden; content is surfaced on the main page.
   - title: "Publications"
-    url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
+    url: /#publications
   - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  # - title: "CV"
-  #   url: /cv-json/
-    
-  - title: "Guide"
-    url: /markdown/
+    url: /#teaching
+  - title: "Selected Awards"
+    url: /#selected-awards
